tests/baselines/reference/parserStrictMode12.errors.txt
parserStrictMode12.ts(2,19): error TS1100: Invalid use of 'eval' in strict mode.


==== parserStrictMode12.ts (1 errors) ====
    "use strict";
    var v = { set foo(eval) { } }
                      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.